<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/outerVerticalLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:onClick="buttonStart_onClick"
        android:text="@string/button_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonStop_onClick"
        android:text="@string/button_stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.773"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.332" />

    <RadioGroup
        android:layout_width="129dp"
        android:layout_height="279dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176">

        <RadioButton
            android:id="@+id/radioButtonDog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioButtonDog_onClick"
            android:text="@string/animal_dog" />

        <RadioButton
            android:id="@+id/radioButtonCat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioButtonCat_onClick"
            android:text="@string/animal_cat" />

        <RadioButton
            android:id="@+id/radioButtonBear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioButtonBear_onClick"
            android:text="@string/animal_bear" />

        <RadioButton
            android:id="@+id/radioButtonCoyote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioButtonCoyote_onClick"
            android:text="@string/animal_coyote" />

        <RadioButton
            android:id="@+id/radioButtonWolf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="radioButtonWolf_onClick"
            android:text="@string/animal_worlf" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
